testing preview commit behavior

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Analytics Call Comparison Tool</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="//www.googletagmanager.com/gtag/js?id=UA-48074139-2"></script>
+    <!-- <script async src="//www.googletagmanager.com/gtag/js?id=UA-48074139-2"></script>
 
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -16,7 +16,7 @@
         }
         gtag('js', new Date());
         gtag('config', 'UA-48074139-2');
-    </script>
+    </script> -->
 
     <style>
         .exists {
