--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
   </style>
 
   <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
     let tracker = {
+      // window.dataLayer = window.dataLayer || [];
+
       push: function (event) {
         console.log(event);
+        event.debug_mode = true;
+        dataLayer.push(event);
       }
     }
 
@@ -199,11 +204,11 @@
 
     var pageActions = {
       buildTable: function (items) {
-        gtag('event', 'build-results-table', {
-          event_category: 'results',
-          event_label: 'number-of-records',
-          value: items.length
-        });
+        // gtag('event', 'build-results-table', {
+        //   event_category: 'results',
+        //   event_label: 'number-of-records',
+        //   value: items.length
+        // });
 
         // create table
         var tbl = document.createElement('table');
@@ -297,11 +302,11 @@
           isDownload = (downloadCheckbox.checked) ? true : false;
 
         if (isDownload) {
-          gtag('event', 'downloading-csv', {
-            event_category: '',
-            event_label: '',
-            value: 1
-          });
+          // gtag('event', 'downloading-csv', {
+          //   event_category: '',
+          //   event_label: '',
+          //   value: 1
+          // });
 
           var hiddenElement = document.createElement('a');
           hiddenElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);
@@ -313,11 +318,11 @@
       },
 
       formSubmit: function () {
-        gtag('event', 'form-submit', {
-          event_category: 'forms',
-          event_label: 'call-compare',
-          value: 1
-        });
+        // gtag('event', 'form-submit', {
+        //   event_category: 'forms',
+        //   event_label: 'call-compare',
+        //   value: 1
+        // });
 
         var ctl = document.getElementById('left-calls').value,
           chl = document.getElementById('right-calls').value;
@@ -380,7 +385,7 @@
 
   <br>
 
-  <form id='compare-form' onsubmit="pageActions.formSubmit()">
+  <form id='compare-form' onsubmit="javascript:pageActions.formSubmit()">
     <table id='form-wrapper'>
       <tr>
         <td>
