disable debug mode

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       push: function (event) {
         console.log(event);
-        event.debug_mode = true;
+        // event.debug_mode = true;
         dataLayer.push(event);
       }
     }
