extend placeholder examples

--- a/index.html
+++ b/index.html
@@ -397,10 +397,10 @@
       <tr>
         <td>
           Left &#8680;<br>
-          <textarea cols='40' rows='8' id='left-calls' placeholder="Example: https://www.example.com/path/file.html?cb=12345678"></textarea>
+          <textarea cols='40' rows='8' id='left-calls' placeholder="Example: https://www.example.com/path/file.html?cb=12345678&account=abc123&prod=pro&event=subscribe"></textarea>
         </td>
         <td>Right &#8680;<br>
-          <textarea cols='40' rows='8' id='right-calls'placeholder="Example: https://www.example.com/path/file.html?cb=87654321"></textarea>
+          <textarea cols='40' rows='8' id='right-calls'placeholder="Example: https://www.example.com/path/file.html?cb=87654321&account=abc123&event=subscribe&region=emea"></textarea>
         </td>
         <td>
           <table class='legend'>
