fix file reference

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     })(window, document, 'script', 'dataLayer', 'GTM-WB28SLN5');</script>
   <!-- End Google Tag Manager -->
 
- <script type="text/javascript" src="/scripts/tracker.js"></script>
- <script type="text/javascript" src="/scripts/call-compare.js"></script>
- <script type="text/javascript" src="/scripts/page-actions.js"></script>
+ <script type="text/javascript" src="/script/tracker.js"></script>
+ <script type="text/javascript" src="/script/call-compare.js"></script>
+ <script type="text/javascript" src="/script/page-actions.js"></script>
 
   <script type="text/javascript">
     function showHide(classname, obj) {
