add stylesheet ref

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Analytics Call Comparison Tool</title>
-  <style src="/style/style.css"></style>
+  <link rel="stylesheet" href="/style/style.css">
   
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
