see how it works

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <tr valign='top'>
         <td>
           <!-- <a href="call-compare_old.html" title="Go back to old call compare tool" alt="Go back to old call compare tool">Go back to old call compare tool</a> -->
-          <a title="Compare Sample URLs" alt="Compare Sample URLs" class="link-style"
+          See how it works: <a title="Compare Sample URLs" alt="Compare Sample URLs" class="link-style"
             onclick="javascript:pageActions.compareSamples();">Compare Sample URLs</a>
         </td>
         <td align='right'>
