--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
       <tr>
         <td>
           Left &#8680;<br>
-          <textarea cols='40' rows='8' id='left-calls'
-            placeholder="https://www.example.com/path/file.html?cb=12345678&account=abc123&prod=pro&event=subscribe"></textarea>
+          <textarea cols='40' rows='8' id='left-calls'></textarea>
         </td>
         <td>Right &#8680;<br>
-          <textarea cols='40' rows='8' id='right-calls'
-            placeholder="https://www.example.com/path/file.html?cb=87654321&account=abc123&event=subscribe&region=emea"></textarea>
+          <textarea cols='40' rows='8' id='right-calls'></textarea>
         </td>
         <td>
           <table class='legend'>
