add calculator css

--- a/calculator/z-score.html
+++ b/calculator/z-score.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Evolytics / Concord Calculator - zScore</title>
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="../style/calculator.css">
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
